name:                texrunner
version:             0.1.0.0
synopsis:            Functions for running TeX.
-- description:         
license:             BSD3
license-file:        LICENSE
bug-reports:         http://github.com/cchalmers/texrunner/issues
author:              Chris Chalmers
maintainer:          c.chalmers@me.com
copyright:           2014 Christopher Chalmers
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     System.TeXRunner,
                       System.TeXRunner.Online,
                       System.TeXRunner.Parse
  -- other-modules:       
  other-extensions:    GeneralizedNewtypeDeriving, OverloadedStrings
  build-depends:       base             >=4.7  && <4.8,
                       bytestring       >=0.10 && <1.0,
                       filepath,
                       directory        >=1.2  && <2.0,
                       temporary        >=1.2  && <2.0,
                       process          >=1.2  && <2.0,
                       mtl              >=2.1  && <3.0,
                       attoparsec       >=0.10 && <1.0,
                       io-streams       >=1.1  && <2.0
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Tests.hs
  ghc-options:    -Wall
  default-language: Haskell2010
  other-modules:
    TeX.PDF

  build-depends:
    base,
    test-framework,
    test-framework-hunit,
    HUnit,
    bytestring,
    texrunner

